# speed-dada

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md
.cargo/: config.toml
.claude/: CLAUDE.md  settings.json
.claude/agents/: algo-verifier.md  pyo3-binder.md  rust-reviewer.md  test-runner.md
.claude/hooks/: on_stop.sh  post_write.sh  pre_tool_use.sh
.claude/skills/bio-algorithms/: SKILL.md
.claude/skills/pyo3-bindings/: SKILL.md
.claude/skills/rust-cargo/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: r-cmd-check.yml  rust.yml  wheels.yml
benchmarks/: bench_dada2rs.R  bench_r.R  bench_rust.py  bench_speeddada.R  compare.py  sim_fastq.py  test_speeddada.R
benchmarks/field/: bench_dada2rs.R  bench_r.R  bench_rust.py  bench_speeddada.R  compare.py  run_all.sh  run_rust_only.sh
benchmarks/jhi/: bench_dada2rs.R  bench_r.R  bench_rust.py  bench_speeddada.R  compare.py  run_all.sh
crates/dada2-core/: Cargo.toml
crates/dada2-core/benches/: pipeline.rs
crates/dada2-core/src/: align.rs  chimera.rs  dada.rs  derep.rs  error_model.rs  filter.rs  lib.rs  merge.rs  pool.rs  quality_profile.rs  runtime.rs  sequence_table.rs  taxonomy.rs
crates/dada2-core/src/io/: fasta.rs  fastq.rs  mod.rs
crates/dada2-py/: Cargo.toml  pyproject.toml
crates/dada2-py/src/: functions.rs  lib.rs  types.rs
crates/dada2-py/tests/: test_bindings.py
crates/dada2-r/src/: lib.rs
crates/speeddada-core/: Cargo.toml
crates/speeddada-core/benches/: pipeline.rs
crates/speeddada-core/src/: chimera.rs  dada.rs  dada_pool.rs  dada_scoring.rs  derep.rs  error_model.rs  filter.rs  lib.rs  merge.rs  pool.rs  primer.rs  quality_profile.rs  runtime.rs  sequence_table.rs  species.rs  taxonomy.rs  test_util.rs
crates/speeddada-core/src/io/: fasta.rs  fastq.rs
crates/speeddada-py/: Cargo.toml  README.md  pyproject.toml
crates/speeddada-py/python/speeddada/: __init__.py  __init__.pyi
crates/speeddada-py/src/: functions.rs  lib.rs  types.rs
crates/speeddada-py/tests/: test_bindings.py
crates/speeddada-r/: Cargo.toml
crates/speeddada-r/src/: lib.rs
r-package/SpeedDada/: .Rbuildignore  DESCRIPTION  LICENSE  NAMESPACE  NEWS.md  README.md  configure  configure.win
r-package/SpeedDada/R/: SpeedDada-package.R  SpeedDada.R  taxonomy.R  utils.R
r-package/SpeedDada/inst/: CITATION
r-package/SpeedDada/inst/extdata/: sample_R1.fastq  sample_R2.fastq
r-package/SpeedDada/inst/scripts/: bake-dada2-snapshots.R  gen-fixture.R
r-package/SpeedDada/man/: SpeedDada-package.Rd  dada.Rd  derepFastq.Rd  filterAndTrim.Rd  learnErrors.Rd  makeSequenceTable.Rd  mergePairs.Rd  removeBimeraDenovo.Rd
r-package/SpeedDada/src/: Makevars.in  Makevars.win.in  entrypoint.c
r-package/SpeedDada/tests/: testthat.R
r-package/SpeedDada/tests/testthat/: helper-parity.R  test-new-api.R  test-parity.R  test-pipeline.R
r-package/SpeedDada/tests/testthat/fixtures-dada2/: README.md  dada2_hiseq.rds  dada2_mgi.rds  dada2_miseq.rds  dada2_nextseq.rds  dada2_novaseq.rds  dada2_pacbio_ccs.rds
r-package/SpeedDada/vignettes/: SpeedDada-pipeline.Rmd
r-package/dada2rs/: configure
r-package/dada2rs/R/: dada2rs.R
r-package/dada2rs/src/: Makevars  Makevars.in
scripts/: check.sh
tests/integration/: pipeline_test.rs
tests/parity/: compare_r_output.py  generate_r_output.R
tests/parity/fixtures/: r_output.json
tools/: push-both.sh  vendor-r-rust.sh
