[workspace]
resolver = "2"
members = [
    "crates/dada2-core",
    "crates/dada2-py",
    "crates/dada2-r",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
authors = ["dada2-rs contributors"]
license = "MIT"

[workspace.dependencies]
rayon          = "1"
criterion      = { version = "0.5", features = ["html_reports"] }
needletail     = "0.5"
ndarray        = { version = "0.15", features = ["serde"] }
statrs         = "0.17"
thiserror      = "1"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
bincode        = "1"
log            = "0.4"
env_logger     = "0.11"
tempfile       = "3"
pyo3           = { version = "0.23", features = ["extension-module"] }
extendr-api    = { version = "0.9", default-features = false }
dada2-core     = { path = "crates/dada2-core" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
