[workspace]
resolver = "2"
members = [
    "crates/speeddada-core",
    "crates/speeddada-py",
    "crates/speeddada-r",
]

[workspace.package]
version       = "0.99.1"
edition       = "2021"
rust-version  = "1.78"
authors       = ["Alexandre Jousset <info@genedance.com>"]
license       = "MIT"
description   = "High-performance DADA2 amplicon sequence variant pipeline — Rust core with Python and R bindings."
homepage      = "https://github.com/Genedance/speed-dada"
repository    = "https://github.com/Genedance/speed-dada"
documentation = "https://genedance.github.io/speed-dada/"
keywords      = ["bioinformatics", "amplicon", "dada2", "microbiome", "asv"]
categories    = ["science", "command-line-utilities"]
readme        = "README.md"

[workspace.dependencies]
rayon          = "1"
criterion      = { version = "0.5", features = ["html_reports"] }
needletail     = "0.5"
ndarray        = { version = "0.15", features = ["serde"] }
statrs         = "0.17"
thiserror      = "1"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
bincode        = "1"
log            = "0.4"
env_logger     = "0.11"
tempfile       = "3"
# `generate-import-lib` lets maturin produce Windows wheels for any
# CPython version listed in `--interpreter` without needing each one
# installed on the runner (creates a stub python3X.lib at build time).
pyo3           = { version = "0.23", features = ["extension-module", "generate-import-lib"] }
extendr-api    = { version = "0.9", default-features = false }
speeddada-core = { path = "crates/speeddada-core", version = "0.99.1" }

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
