[package]
name = "dada2-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
rayon.workspace         = true
needletail.workspace    = true
ndarray.workspace       = true
statrs.workspace        = true
ordered-float.workspace = true
thiserror.workspace     = true
serde.workspace         = true
serde_json.workspace    = true
log.workspace           = true
env_logger.workspace    = true
tempfile.workspace      = true

[dev-dependencies]
tempfile.workspace = true

[[test]]
name = "pipeline_test"
path = "../../tests/integration/pipeline_test.rs"

[lints.clippy]
pedantic = "warn"
