[package]
name                    = "speeddada-core"
version.workspace       = true
edition.workspace       = true
rust-version.workspace  = true
authors.workspace       = true
license.workspace       = true
description.workspace   = true
homepage.workspace      = true
repository.workspace    = true
documentation.workspace = true
keywords.workspace      = true
categories.workspace    = true
readme.workspace        = true

[lib]
name = "speeddada_core"

[dependencies]
rayon.workspace         = true
needletail.workspace    = true
ndarray.workspace       = true
statrs.workspace        = true
thiserror.workspace     = true
serde.workspace         = true
serde_json.workspace    = true
bincode.workspace       = true
log.workspace           = true
env_logger.workspace    = true
tempfile.workspace      = true

[dev-dependencies]
tempfile.workspace  = true
criterion.workspace = true

[[bench]]
name    = "pipeline"
harness = false

[[bin]]
name = "speeddada-bench"
path = "src/bin/speeddada_bench.rs"

[[test]]
name = "pipeline_test"
path = "../../tests/integration/pipeline_test.rs"

[lints.clippy]
pedantic = "warn"
