[package]
name              = "speeddada-r"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description       = "R bindings for the speeddada DADA2 pipeline (Rust core via extendr-api)."
homepage.workspace   = true
repository.workspace = true

[lib]
name       = "speeddada_r"
crate-type = ["staticlib"]

[dependencies]
extendr-api.workspace    = true
speeddada-core.workspace = true
